--- a/nadderud_sjakklubb/style.css
+++ b/nadderud_sjakklubb/style.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.overskrift, .underoverskrift {
+    font-family: serif;
+}
+
 /*.boks {
     text-align: center;
     width: 400px;
@@ -17,6 +25,8 @@
     border: 2px solid white;
 }*/
 
+
+/*Overskrifter */
 .overskrift {
     text-align: center;
     width: 400px;
@@ -26,24 +36,20 @@
     padding: 8px;
     margin: auto;
     border: 2px solid black;
+
 }
 
-.sjakknøtter_informasjon {
-    font-size: 20px;
-    text-align: center;
+#logo {
+    color: #000;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 30px;
+    margin: 15px;
 }
 
-.informasjon {
-    margin-left: 40px;
-    font-size: 20px;
-    
-    list-style: circle;
-}
-
-
-.informasjon_topp {
-    font-size: 20px;
-    text-align: center;
+#logo a {
+    text-decoration: none;
+    color: #000;
 }
 
 .underoverskrift {
@@ -56,6 +62,27 @@
 .informasjon .underoverskrift {
     margin: 100px;
 }
+
+/*Generell informasjon */
+.informasjon {
+    margin-left: 40px;
+    font-size: 20px;
+    
+    list-style: circle;
+}
+
+.informasjon_topp {
+    font-size: 20px;
+    text-align: center;
+}
+
+
+/*Sjakknøtter */
+.sjakknøtter_informasjon {
+    font-size: 20px;
+    text-align: center;
+}
+
 
 /*Lenker */
 a {
@@ -88,29 +115,35 @@ nav {
     align-items: center;
     min-height: 8vh;
     background-color: #c09b6f;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Crete Round', serif;
     border: 1px solid #000;
-
 }
 
-#logo {
-    color: #000;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    font-size: 30px;
-    margin: 15px;
+.burger-meny {
+    position: absolute;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 60px;
+    height: 50px;
+    padding: auto;
 }
 
-#logo a {
-    text-decoration: none;
-    color: #000;
+.burger-meny .bar {
+    height: 8px;
+    width: 100%;
+    background-color: #000;
+    border-radius: 10px;
 }
 
+
+/*Meny lenker */
 .meny-lenker {
     display: flex;
     margin: 0;
     padding: 0;
-    font-size: 15px;
+    font-size: 20px;
     
 }
 
@@ -130,23 +163,9 @@ nav {
     background-color: #f1be7e;
 }
 
-.burger-meny {
-    position: absolute;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 60px;
-    height: 50px;
-    padding: auto;
-}
-
-
-.burger-meny .bar {
-    height: 8px;
-    width: 100%;
-    background-color: #000;
-    border-radius: 10px;
+/*Tabelldiv */
+#tabelldiv {
+    margin-bottom: 100px;
 }
 
 /*Sjakknøtter */
@@ -185,12 +204,11 @@ nav {
       background-color: white!important;
   }
 
-  #knapp {
-      width: 150px;
+  .knappboks {
       height: 30px;
-      margin-left: 47.2%;
-      position: relative;
-      top: -40px;
+      display: flex;
+    justify-content: center;
+
   }
 
   #knapp:hover {
@@ -240,6 +258,7 @@ nav {
     font-size: 40px;
 }
 
+
 /*Tabell */
 .program_informasjon {
     text-align: center;
@@ -283,9 +302,13 @@ th:first-child{
 td:first-child{
     width: 10px;
 }
+
+
+
 /*Når width < 1024px */
 @media (max-width: 1024px) {
 
+    /*Overskrifter */
     #logo {
         font-size: 50px;
     }
@@ -297,63 +320,35 @@ td:first-child{
         margin: auto;
     }
 
-    .sjakk {
-        width: 800px;
-        height: 800px;
-    }
-
-    .tårn, .springer, .løper, .dronning, .konge, .bonde {
-        font-size: 70px;
-    }
-
-    .usynlig {
-        font-size: 40px;
-    }
-
-    #knapp {
-        width: 300px;
-        height: 60px;
-
-        position: relative;
-        top: 30px;
-        font-size: 50px;
-    }
-
     .underoverskrift {
         font-size: 55px;
         margin-left: 30px;
         margin-top: 50px;
     }
 
-    .sjakknøtter_informasjon {
-        font-size: 50px;
-        text-align: center;
-    }
 
-    #løsning1, #løsning2 {
-        font-size: 55px;
 
-        position: relative;
-        top: 30px;
-    }
-
+/*Generell informasjon */
     .informasjon {
-        font-size: 50px;
+        font-size: 40px;
         margin-left: 60px;
         margin-top: 10px;
     }
 
     .informasjon_topp {
-        font-size: 55px;
+        font-size: 45px;
         margin: auto;
         margin-top: 20px;
     }
     
+
+    /*Meny */
     .burger-meny {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
     }
+
 
     .meny-lenker {
         font-size: 50px;
@@ -371,6 +366,8 @@ td:first-child{
         
         flex-direction: column;
         align-items: center;
+
+        overflow-y: auto;
     }
 
     .meny-lenker li {
@@ -386,8 +383,52 @@ td:first-child{
         display: flex;
     }
 
-    /*Tabell */
 
+    /*Sjakknøtter*/
+    .sjakk {
+        width: 800px;
+        height: 800px;
+    }
+
+    .tårn, .springer, .løper, .dronning, .konge, .bonde {
+        font-size: 70px;
+    }
+
+    .usynlig {
+        font-size: 40px;
+    }
+
+    #knappboks {
+        width: 300px;
+        height: 60px;
+
+        position: relative;
+        top: 30px;
+        font-size: 50px;
+
+        display: flex;
+        justify-content: center;
+
+    }
+
+    #knapp
+
+    
+
+    .sjakknøtter_informasjon {
+        font-size: 50px;
+        text-align: center;
+    }
+
+    #løsning1, #løsning2 {
+        font-size: 55px;
+
+        position: relative;
+        top: 30px;
+    }
+
+
+    /*Tabell */
     .program_informasjon {
         text-align: center;
         font-size: 50px;
@@ -433,6 +474,7 @@ td:first-child{
 
 /*Når width < 920px */
 @media (max-width: 920px) {
+    /*Overskrifter */
     #logo {
         width: 50%;
         
@@ -444,10 +486,12 @@ td:first-child{
 /*Når width < 600px */  
 @media (max-width: 740px) {
 
+    /*Overskifter */
     #logo {
         width: 50%;
     }
 
+    /*Meny */
     .meny-lenker {
         font-size: 30px;
     }
