--- a/eventyrspillet/style.css
+++ b/eventyrspillet/style.css
@@ -135,11 +135,15 @@ h1 {
 
 @media (max-width: 700px) {
   .btn{
-    font-size: 20px;
+    font-size: 30px;
   }
 
   #text{
-    font-size: 20px;
+    font-size: 30px;
+  }
+
+  h1{
+    font-size: 60px;
   }
 
 }
