--- a/eventyrspillet/style.css
+++ b/eventyrspillet/style.css
@@ -1,61 +1,3 @@
-/* *, *::before, *::after {
-  box-sizing: border-box;
-  font-family: "Orbitron";
-}
-
-body {
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 100vw;
-  height: 100vh;
-  background-color: grey ;
-}
-
-
-
-.boks {
-  width: 1600px;
-  height: 400px;
-  max-width: 80%;
-  background-color: white;
-  padding: 15px;
-  border-radius: 8px;
-
-  box-shadow: 0 0 10px 2px;
-}
-
-.boks, .valg-knapper {
-  font-size: 50px;
-  text-align: center;
-}
-
-
-.knapp-grid{
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 10px;
-  margin-top: 20px;
-}
-
-.knapp {
-  background-color: hsl(200, 100%, 50%);
-  border: 2px solid black;
-  border-radius: 5px;
-  padding: 5px 10px;
-  color: white;
-  outline: none;
-}
-
-.knapp:hover {
-  border-color: red;
-  cursor: pointer;
-}*/
-
-
 *, *::before, *::after {
   box-sizing: border-box;
   font-family: "Orbitron";
@@ -108,9 +50,6 @@ h1 {
 }
 
 
-.btn:hover{
-    cursor: pointer;
-}
 
 .btn-grid {
   display: grid;
@@ -131,6 +70,11 @@ h1 {
 .btn:hover {
   border: 2px solid;
   border-color: red;
+  cursor: pointer;
+}
+
+.btn:focus{
+  border-color: red;
 }
 
 @media (max-width: 700px) {
@@ -148,7 +92,7 @@ h1 {
 
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   h1{
     font-size: 50px;
   }
