--- a/eventyrspillet/style.css
+++ b/eventyrspillet/style.css
@@ -91,6 +91,11 @@ h1, a {
 
 
 /*Easter eggs*/
+
+#antiEasterEgg{
+  visibility: hidden;
+}
+
 #easterEggKnapp{
   position: relative;
   top: 100px;
@@ -162,7 +167,7 @@ li{
     max-width: 95%;
   }
   .btn{
-    font-size: 15px;
+    font-size: 18px;
   }
 
   #tekst{
